--- a/demo/css/styles.css
+++ b/demo/css/styles.css
@@ -2,11 +2,10 @@ html, body {
     padding: 0px;
     margin: 0px;
     width: 100%;
-    height: 100%;
+    min-height: 100%;
 }
 
 body {
-    height: 600%;
     color: #0C1F31;
     background: #fff;
     font-family: 'Avenir Next', 'Helvetica Neue', Helvetica, Arial, sans-serif;
